# spbu-modern-programming

./: .gitignore  README.md  build.bat  run_tests.bat
projects/: CMakeLists.txt
projects/long_number/: CmakeLists.txt  main.cpp  run_long_number.bat
projects/merge_sort/: CMakeLists.txt  merge_sort.cpp
projects/random/: CmakeLists.txt  build.bat  main.cpp  run_random.bat  templates.cpp
projects/scl/src/: CMakeLists.txt
projects/scl/src/list/: CMakeLists.txt  doubly_linked_list.cpp  doubly_linked_list.hpp
projects/scl/src/vector/: vector.cpp  vector.hpp
projects/scl/test/long_number/: test_long_number.cpp
projects/scl_homework/: CMakeLists.txt
projects/scl_homework/src/long_number/: long_number.cpp  long_number.hpp
projects/scl_homework/test/long_number/: CmakeLists.txt  test_long_number.cpp
projects/shell_sort/: CMakeLists.txt  shell_sort.cpp
projects/unit_test_merge_sort/: CMakeLists.txt
projects/unit_test_merge_sort/src/: CMakeLists.txt  merge_sort.cpp  merge_sort.hpp
projects/unit_test_merge_sort/test/: CMakeLists.txt  test_merge.cpp
